--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@daveyplate/better-auth-ui": "^3.2.8",
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "better-auth": "^1.3.34",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "inngest": "^3.45.1",
+    "lucide-react": "^0.553.0",
     "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -42,6 +50,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.5.0",
     "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
