--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.932.0",
+    "@aws-sdk/s3-request-presigner": "^3.932.0",
     "@daveyplate/better-auth-ui": "^3.2.8",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.12.0",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
